Fix code line-height on iOS

--- a/_includes/css/content.css
+++ b/_includes/css/content.css
@@ -44,7 +44,7 @@ li p:last-child {
 
 /* Correct for weird line-height of fixed-width fonts */
 code {
-  line-height:              22px;
+  line-height:              20px;
   padding-top:              1px;
   margin-bottom:            -1px;
 }
